--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
   "scripts": {
     "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "build:ui": "rm -rf build && cd ../fullstack-open/viikko2/puhelinluettelo/ && npm run build --prod && cp -r build ../../../fullstack-viikko3/",
+    "deploy": "git push heroku main",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",    
+    "logs:prod": "heroku logs --tail"
   },
   "author": "Okko Kuisma",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^5.13.7",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
